# josue-backend

./: Dockerfile  Makefile  check_access.py  check_fields.sh  create_users.py  docker-compose.yml  fix_access.py  grant_access.py  josue_postman.json  main.py  manage.py  pyproject.toml  requirements.txt  seed_companies.py  seed_financials.py  seed_notifications.py  test_500.py  test_aggregate.py  test_api.py  test_api_bucket.py  test_api_internal.py  test_bucket_list.py  test_create.py  test_curl.py  test_debug.py  test_debug2.py  test_get_variations.py  test_invalid_date.py  test_invoice.py  test_nan.py  test_none.py  test_parse.py  test_post_briefing.py  test_post_variations.py  test_proforma_submit.py  test_quotations.js  test_read_nan.py  test_variations.py
app/account/: admin.py  models.py  permissions.py  serializers.py  service.py  urls.py  views.py
app/admin/: apps.py  serializers.py  urls.py  views.py
app/commercial_department/: apps.py  models.py  serializers.py  urls.py  views.py
app/contracts_manager/: apps.py  serializers.py  urls.py  views.py
app/document_controller/: apps.py  serializers.py  urls.py  views.py
app/employee/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/finance_department/: apps.py  models.py  serializers.py  urls.py  views.py
app/managers/: apps.py
app/managing_director/: apps.py
app/procurement_department/: apps.py  models.py  pdf_utils.py  serializers.py  urls.py  views.py
app/project_admin/: admin.py  apps.py  invoice_views.py  models.py  serializers.py  (+2 more)
config/: urls.py
scratch/: check_db.py
(+73 files in other folders)
